# Odin

./: .gitignore  CMakeLists.txt  README.md  build.bat  dependencies.bat  run.bat
data/: config.ini
data/Models/: bonelord_2side_part1.msh  bonelord_2side_part2.msh  bonelord_part1.msh  bonelord_part2_part1.msh  bonelord_part2_part2.msh
data/Shaders/: simple.fs  simple.vs  text.fs  text.vs  uber.fs  uber.vs
data/models/: animated.dae  cube.dae
data/shaders/: simple.vs  skinning.fs  skinning.vs
doc/: Readme.txt
include/Odin/: ColladaLoader.h  File.h  Joint.h  Mesh.h  OBJLoader.h  Shader.h  String.h  Vector.h  Window.h
include/Util/: String.h  XmlAttribute.h  XmlNode.h  XmlParser.h
src/: CMakeLists.txt  ColladaLoader.cpp  File.cpp  Joint.cpp  OBJLoader.cpp  Shader.cpp  String.cpp  Vector.cpp  glad.c  main.cpp  odbc_example.cpp  odin.cpp  odin.h  odin_math.cpp  odin_win32.cpp
src/Odin/: ColladaLoader.cpp  Mesh.cpp  OBJLoader.cpp  Window.cpp
src/Util/: File.cpp  String.cpp  XmlAttribute.cpp  XmlNode.cpp  XmlParser.cpp
src/glad/: glad.c  glad.h
